test/libsolidity/syntaxTests/constructor/base_constructor_missing_arguments_abstract_modifier_init_empty_list.sol
abstract contract C {
    constructor(uint, bool) {}
}

abstract contract D is C { constructor() C() {} }
// ----
// TypeError 2973: (97-100): Wrong argument count for modifier invocation: 0 arguments given but expected 2.
